2007-12-28 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/aslex.c: moved from as/mcs51/aslex.c;
	  introduced (readlin) - long lines are turuncated
	* as/hc08/as_hc08.dsp, as/mcs51/asx8051.dsp, as/z80/as_gbz80.dsp,
	  as/z80/as_z80.dsp, as/hc08/Makefile.in, as/mcs51/Makefile.in,
	  as/z80/Makefile.in: moved aslex.c to asxxsrc
	* as/hc08/aslex.c, as/z80/aslex.c: deleted
	* as/z80/asmain.c, as/hc08/asmain.c, as/mcs51/asmain.c:
	  added missing initialization of a_addr field

2007-12-22 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.lex: fixed bug #1852894: # character hangs the compiler

2007-12-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (computeType): fixed bug, thanks Fan Weiguang

2007-12-16 Borut Razem <borut.razem AT siol.net>

	* device/include/pic16/stdbool.h: removed, since already exists in
	 device/include/; this also fixes bitopcse.c regression test for pic16
	 target
	* support/regression/fwk/inclusw/testfwk.h: added macro ASSERT_FAILED
	* src/pic16/glue.c: fixed bug #1851855: generic static pointer
	  dereference doesn't work; covered by regression test bug1399290

2007-12-05 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: fixed bug #1844509 - Correction to Manual 4.6.9
	  Adding new PIC16

2007-12-01 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdmem.cc, sim/ucsim/cmd.src/mem.cc:
	  corrected handling of the highest_valid_address

2007-11-17 Raphael Neider <rneider AT web.de>

	* src/pic/main.c (_asmCmd): include debug arguments (-g as $3)
	* src/pic/glue.c (picglue): emit .file if --debug is given

2007-11-17 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c (pic16_genPlus, pic16_genMinus): take special
	care when left or right operand resides in result, fixes #1830220

2007-11-17 Borut Razem <borut.razem AT siol.net>

	* src/SDCCglue.c, src/pic16/glue.c: reverted fix for bug
	  #983491 - "Merge duplicate strings function is ineffective"